--- a/src/app/menu/about/about.component.html
+++ b/src/app/menu/about/about.component.html
@@ -1,1 +1,4 @@
-<p>about works!</p>
+<div class="message">
+    <p>გვერდი დროებით მიუწვდომელია</p>
+    <div><img class="gear" src="assets/images/gear.png" alt="" srcset=""></div> 
+</div>
